<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AdminPassword">

    <TextView
        android:id="@+id/textViewAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/play"
        android:text="@string/enter_new_password"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AdminPasswordOK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"
        android:text="@string/set"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAdmin">

        <TextView
            android:id="@+id/textViewAdminPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center|end"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextAdminPassword"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="11dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/minimum_8_characters"
            android:inputType="textVisiblePassword"
            android:textColor="@color/text_color"
            android:textColorHint="#8F9193" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>