<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FirstSetupActivity">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:id="@+id/help_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/need_help"
        android:fontFamily="@font/play"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/play"
        android:text="@string/router_configuration"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/mergePortsHotspot"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"
        android:text="@string/add_ports_to_hotspot_network"
        app:layout_constraintEnd_toEndOf="@+id/buttonRouterSetup"
        app:layout_constraintStart_toStartOf="@+id/buttonRouterSetup"
        app:layout_constraintTop_toBottomOf="@+id/buttonRouterSetup" />

    <Button
        android:id="@+id/mergePorts"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"
        android:text="@string/add_ports_to_parent_network"
        app:layout_constraintEnd_toEndOf="@+id/mergePortsHotspot"
        app:layout_constraintStart_toStartOf="@+id/mergePortsHotspot"
        app:layout_constraintTop_toBottomOf="@+id/mergePortsHotspot" />

    <Button
        android:id="@+id/buttonRouterSetup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"

        android:text="@string/set"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout12"
        app:layout_constraintStart_toStartOf="@+id/linearLayout12"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textViewWiFiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center"
            android:text="@string/wi_fi_name"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextWiFiName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:maxLength="32"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout10"
        app:layout_constraintStart_toStartOf="@+id/linearLayout10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:id="@+id/textViewWiFiPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center"
            android:text="@string/wi_fi_password"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextWiFiPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/minimum_8_characters"
            android:inputType="textPersonName"
            android:maxLength="32"
            android:text="mcsimple"
            android:textColor="@color/text_color"
            android:textColorHint="@color/for_improvider"
            android:textSize="16sp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout11"
        app:layout_constraintStart_toStartOf="@+id/linearLayout11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <TextView
            android:id="@+id/textViewAdminPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center"
            android:text="@string/admin_s_password"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextAdminPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:maxLength="32"
            android:text="mcsimple.net"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            tools:ignore="TextFields" />
    </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>