<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".WiFiSetup">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/play"
        android:text="@string/wi_fi_configuration"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WiFiPasswordOK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"
        android:text="@string/set"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/WiFiNameOK"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/for_improvider"
        android:fontFamily="@font/play"
        android:text="@string/set"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textViewGuestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center|end"
            android:text="@string/network_name"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextWName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:maxLength="32"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/dark_background_card_view"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WiFiNameOK">

        <TextView
            android:id="@+id/textViewGuestPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/play"
            android:gravity="center|end"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextWPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:hint="@string/minimum_8_characters"
            android:inputType="textVisiblePassword"
            android:textColor="@color/text_color"
            android:textColorHint="#8F9193" />
    </LinearLayout>

    <TextView
        android:id="@+id/help_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/need_help"
        android:fontFamily="@font/play"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>